fixed yarn issue and uml shows

--- a/upload/sa/model/index.html
+++ b/upload/sa/model/index.html
@@ -470,7 +470,19 @@ for web crawling given that the final website will be hosting data crawled direc
 <img src="./puml_e3.svg"><h2 id="scenario-3">Scenario 3</h2>
 <p>Quality: <em>Scalability</em></p>
 <p>Scenario: The system should be able to handle an increasing number of users and data without critically hindering performance.</p>
-<img src="./puml_e4.svg"><h1 id="ex---quality-attribute-tradeoff"><span class='task'>4.</span>  Quality Attribute Tradeoff</h1>
+<img src="./puml_e4.svg"><h2 id="scenario-4">Scenario 4</h2>
+<p>Quality: <em>Simplicity</em></p>
+<p>Scenario: The user interface should be simple and lightweight to not overwhelm users with too much information at once.</p>
+<img src="./puml_e5.svg"><h2 id="scenario-5">Scenario 5</h2>
+<p>Quality: <em>Learnability</em></p>
+<p>Scenario: The user interface should resemble familiar and common interfaces to minimize as much as possible the learning curve of the user and allow them to use the website within 2 minutes of their arrival.</p>
+<img src="./puml_e6.svg"><h2 id="scenario-6">Scenario 6</h2>
+<p>Quality: <em>Privacy</em></p>
+<p>Scenario: Account creation should be optional and will not require anything other than a username, an email and a password without asking for any sensitive information.</p>
+<img src="./puml_e7.svg"><h2 id="scenario-7">Scenario 7</h2>
+<p>Quality: <em>Feasibility (Affordability)</em></p>
+<p>Scenario: The system may lack data if crawlers are blocked or if there is no legal permission to craw a website.</p>
+<img src="./puml_e8.svg"><h1 id="ex---quality-attribute-tradeoff"><span class='task'>4.</span>  Quality Attribute Tradeoff</h1>
 <section class="instructions"><p>Pick a free combination of two qualities on the <a href="https://usi365.sharepoint.com/:x:/s/MSDE-2022-SoftwareArchitecture/ESVksoXVgMNHtKBKrIwatMYBqorOFaKjxnoqssEy0gNPCg?e=81W7SI">map</a> and write your name to claim it.</p>
 <p>Then write a short text giving an example for the tradeoff in this assignment.</p>
 <section class="pass"><span>&starf;&star;&star;: </span>1 unique trade-off</section><section class="ok"><span>&starf;&starf;&star;: </span>2 trade-offs</section><section class="exceed"><span>&starf;&starf;&starf;: </span>&gt;2 trade-offs</section></section><h2 id="portability-vs-performance-example">Portability vs. Performance (Example)</h2>
@@ -498,7 +510,7 @@ for web crawling given that the final website will be hosting data crawled direc
 <p>You can add additional process views showing how other use cases can be satisfied by the same set of components.</p>
 <p>This assignment will focus on modularity-related decisions, we will worry about deployment and the container view later.</p>
 <p>Here is a PlantUML example logical view and process view.</p>
-<img src="./puml_e5.svg"><img src="./puml_e6.svg"><section class="hint"><span>Hint: </span>How to connect sub-components to other external components? Use this pattern.</section><img src="./puml_e7.svg"><section class="pass"><span>&starf;&star;&star;: </span>6 components (1 decomposed), 1 use case/process view</section><section class="ok"><span>&starf;&starf;&star;: </span>6 components (1 decomposed), 2 use case/process view</section><section class="exceed"><span>&starf;&starf;&starf;: </span>&gt;6 components (&gt;1 decomposed) and &gt;2 use case/process view</section></section><h2 id="logical-view">Logical View</h2>
+<img src="./puml_e9.svg"><img src="./puml_e10.svg"><section class="hint"><span>Hint: </span>How to connect sub-components to other external components? Use this pattern.</section><img src="./puml_e11.svg"><section class="pass"><span>&starf;&star;&star;: </span>6 components (1 decomposed), 1 use case/process view</section><section class="ok"><span>&starf;&starf;&star;: </span>6 components (1 decomposed), 2 use case/process view</section><section class="exceed"><span>&starf;&starf;&starf;: </span>&gt;6 components (&gt;1 decomposed) and &gt;2 use case/process view</section></section><h2 id="logical-view">Logical View</h2>
 <h2 id="process-views">Process Views</h2>
 <p>Use Case: </p>
 <h1 id="ex---component-model-bottom-up"><span class='task'>8.</span>  Component Model: Bottom-Up</h1>
