fixed scenarios according to feedback

--- a/upload/sa/model/index.html
+++ b/upload/sa/model/index.html
@@ -462,7 +462,7 @@ for web crawling given that the final website will be hosting data crawled direc
 <p>Quality: <em>Recoverability</em></p>
 <p>Scenario: In case of power failure, rebooting the system should take up to 20 seconds.</p>
 <img src="./puml_e1.svg"><h2 id="scenario-1">Scenario 1</h2>
-<p>Quality: <em>Availability</em></p>
+<p>Quality: <em>Freshness</em></p>
 <p>Scenario: To provide up-to-date information on the website, the data will be crawled at regular intervals between 12h and 48h (to be decided).</p>
 <img src="./puml_e2.svg"><h2 id="scenario-2">Scenario 2</h2>
 <p>Quality: <em>Compatibility</em></p>
@@ -481,7 +481,7 @@ for web crawling given that the final website will be hosting data crawled direc
 <p>Scenario: Account creation should be optional and will not require anything other than a username, an email and a password without asking for any sensitive information.</p>
 <img src="./puml_e7.svg"><h2 id="scenario-7">Scenario 7</h2>
 <p>Quality: <em>Feasibility (Affordability)</em></p>
-<p>Scenario: The system may lack data if crawlers are blocked or if there is no legal permission to craw a website.</p>
+<p>Scenario: The system may lack data if crawlers are blocked or if there is no legal permission to crawl a website.</p>
 <img src="./puml_e8.svg"><h1 id="ex---quality-attribute-tradeoff"><span class='task'>4.</span>  Quality Attribute Tradeoff</h1>
 <section class="instructions"><p>Pick a free combination of two qualities on the <a href="https://usi365.sharepoint.com/:x:/s/MSDE-2022-SoftwareArchitecture/ESVksoXVgMNHtKBKrIwatMYBqorOFaKjxnoqssEy0gNPCg?e=81W7SI">map</a> and write your name to claim it.</p>
 <p>Then write a short text giving an example for the tradeoff in this assignment.</p>
