done logical and process views

--- a/upload/sa/model/index.html
+++ b/upload/sa/model/index.html
@@ -519,9 +519,11 @@ for web crawling given that the final website will be hosting data crawled direc
 <p>This assignment will focus on modularity-related decisions, we will worry about deployment and the container view later.</p>
 <p>Here is a PlantUML example logical view and process view.</p>
 <img src="./puml_e9.svg"><img src="./puml_e10.svg"><section class="hint"><span>Hint: </span>How to connect sub-components to other external components? Use this pattern.</section><img src="./puml_e11.svg"><section class="pass"><span>&starf;&star;&star;: </span>6 components (1 decomposed), 1 use case/process view</section><section class="ok"><span>&starf;&starf;&star;: </span>6 components (1 decomposed), 2 use case/process view</section><section class="exceed"><span>&starf;&starf;&starf;: </span>&gt;6 components (&gt;1 decomposed) and &gt;2 use case/process view</section></section><h2 id="logical-view">Logical View</h2>
-<h2 id="process-views">Process Views</h2>
-<p>Use Case: </p>
-<h1 id="ex---component-model-bottom-up"><span class='task'>8.</span>  Component Model: Bottom-Up</h1>
+<img src="./puml_e12.svg"><h2 id="process-views">Process Views</h2>
+<h3 id="user-search-and-browse">User Search and Browse</h3>
+<img src="./puml_e13.svg"><h3 id="user-post-or-crawled-data">User Post or Crawled Data</h3>
+<img src="./puml_e14.svg"><h3 id="contact-other-users">Contact Other Users</h3>
+<img src="./puml_e15.svg"><h1 id="ex---component-model-bottom-up"><span class='task'>8.</span>  Component Model: Bottom-Up</h1>
 <section class="instructions"><p>Within the context of your project domain, represent a model of your modular software architecture decomposed into components.</p>
 <p>To design this model you should attempt to buy and reuse as many components as possible.</p>
 <p>In addition to the logical and process views, you should give a precise list to all sources and prices of the components you have selected to be reused.</p>
